<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/darkGrey">

    <!--here i used relative layout to align loading screen ..... but the original layout is Linear layout ....-->

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/loading_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@android:color/white">

            <ProgressBar
                android:id="@+id/progres_bar"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading_data"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/main_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                tools:context=".views.MainActivity">

                <EditText
                    android:id="@+id/volunteer_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:drawableStart="@drawable/ic_accessibility_black_24dp"
                    android:drawableTint="@android:color/black"
                    android:hint="@string/volunteer_name"
                    android:padding="10dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/volunteer_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:drawableStart="@drawable/ic_phone"
                    android:drawableTint="@android:color/black"
                    android:hint="@string/volunteer_phone"
                    android:padding="10dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/volunteer_DOB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_date"
                    android:drawableTint="@android:color/black"
                    android:editable="false"
                    android:focusable="false"
                    android:hint="@string/volunteer_DOB"
                    android:inputType="date"
                    android:padding="10dp"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:entries="@array/countries"
                    android:prompt="@string/volunteer_country" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="35dp"
                            android:layout_height="30dp"
                            android:layout_marginEnd="5dp"
                            app:srcCompat="@drawable/ic_gender" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/volunteer_gender"
                            android:textColor="@android:color/black"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <RadioGroup
                                android:id="@+id/gender"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:elevation="10dp"
                                android:orientation="horizontal">

                                <RadioButton
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/male"
                                    android:textSize="16sp" />

                                <RadioButton
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/female"
                                    android:textSize="16sp" />


                            </RadioGroup>
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/volunteer_hours"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.5"
                        android:drawableStart="@drawable/ic_work_black"
                        android:drawableTint="@android:color/black"
                        android:hint="@string/volunteer_work"
                        android:padding="10dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/volunteer_work"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_time"
                        android:drawableTint="@android:color/black"
                        android:hint="@string/volunteer_communityWorkHours"
                        android:inputType="number"
                        android:padding="10dp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"
                        android:textSize="16sp" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/is_active"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/isActive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:textOff="@string/not_active"
                        android:textOn="@string/active" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/add_volunteer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@android:color/holo_blue_dark"
                    android:text="@string/add_volunteer"
                    android:textColor="@android:color/white" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorPrimary" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/volunteers_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</layout>